--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,9 +2,9 @@
   <input id="title" placeholder="Title" required />
   <textarea id="description"></textarea>
   <select id="status">
-    <option>Pending</option>
-    <option>In Progress</option>
-    <option>Completed</option>
+    <option value="Pending">Pending</option>
+    <option value="In Progress">In Progress</option>
+    <option value="Completed">Completed</option>
   </select>
   <button>Add Task</button>
 </form>
